[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/BaseSummon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Shield.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.206704, 1 )
colors = PoolColorArray( 0.568627, 0.541176, 0.564706, 1, 0.321569, 0.321569, 0.321569, 0 )

[node name="Shield" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_mana = 5.0
owner_group = "boss"

[node name="ShieldArea" type="Area2D" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea" index="0"]
shape = SubResource( 1 )

[node name="ShieldParticles" type="CPUParticles2D" parent="." index="1"]
amount = 700
lifetime = 5.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 8.0
initial_velocity_random = 1.0
orbit_velocity = 2.0
orbit_velocity_random = 1.0
linear_accel_random = 1.0
radial_accel = 6.0
radial_accel_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )

[node name="DisperseTimer" type="Timer" parent="." index="2"]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="ShieldArea" to="." method="_on_ShieldArea_area_entered"]
